# siut-internship-fall2025-ros

./: Dockerfile  README.md  pseudocode.txt  start.sh
ros2_ws/src/nodes/student_nodes/: subscriber.py
ros2_ws/src/vacuum_sim/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/vacuum_sim/launch/: hello.launch.py
ros2_ws/src/vacuum_sim/worlds/: easy1.world  hello.world
workspace/: hello.txt
